infra/piska/infra/kafkajkj/rendered/07-service-kafkajkj.yaml
# Source: kafkajkj/charts/kafka/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkajkj
  namespace: "infra-kafka"
  labels:
    app.kubernetes.io/instance: kafkajkj
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kafka
    app.kubernetes.io/version: 3.7.0
    helm.sh/chart: kafka-28.3.0
    app.kubernetes.io/component: kafka
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: client
      nodePort: null
  selector:
    app.kubernetes.io/instance: kafkajkj
    app.kubernetes.io/name: kafka
    app.kubernetes.io/part-of: kafka
