infra/piska/infra/kafkajkj/rendered/09-networkpolicy-kafkajkj.yaml
---
# Source: kafkajkj/charts/kafka/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafkajkj
  namespace: "infra-kafka"
  labels:
    app.kubernetes.io/instance: kafkajkj
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kafka
    app.kubernetes.io/version: 3.7.0
    helm.sh/chart: kafka-28.3.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kafkajkj
      app.kubernetes.io/name: kafka
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow client connections
    - ports:
        - port: 9092
        - port: 9094
        - port: 9093
